--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,11 @@ h1 {
 }
 h2 {
     background-color: #ffffff;
+    text-align: center;
 }
+
+
+/* Navigation Bar */
 ul {
     list-style-type: none;
     margin: 0;
@@ -31,6 +35,9 @@ li a {
 li a:hover {
     background-color: #111;
 }
+
+
+/* Login section */
 * {
     box-sizing: border-box;
   }
@@ -82,4 +89,42 @@ li a:hover {
       width: 100%;
       margin-top: 0;
     }
+}
+
+
+/* password requirements */
+#message {
+  display:none;
+  background: #f1f1f1;
+  color: #000;
+  position: relative;
+  padding: 20px;
+  margin-top: 10px;
+}
+
+#message p {
+  padding: 10px 35px;
+  font-size: 18px;
+}
+
+/* Add a green text color and a checkmark when the requirements are right */
+.valid {
+  color: green;
+}
+
+.valid:before {
+  position: relative;
+  left: -35px;
+  content: "&#10004;";
+}
+
+/* Add a red text color and an "x" icon when the requirements are wrong */
+.invalid {
+  color: red;
+}
+
+.invalid:before {
+  position: relative;
+  left: -35px;
+  content: "&#10006;";
 }
