--- a/app/website/static/css/styles.css
+++ b/app/website/static/css/styles.css
@@ -35,6 +35,14 @@ li a {
 li a:hover {
     background-color: #111;
 }
+nav ul li a.split {
+  float: right;
+    background-color: #50577A;
+    color: white;
+}
+ol {
+  list-style-type: none;
+}
 
 
 /* Login section */
@@ -53,7 +61,7 @@ li a:hover {
     display: inline-block;
   }
   input[type=submit] {
-    background-color: #04AA6D;
+    background-color: #50577A;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -62,12 +70,12 @@ li a:hover {
     float: right;
   }
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #4455ac;
   }
   .container {
     border-radius: 5px;
     background-color: #f2f2f2;
-    padding: 20px;
+    padding: 15px;
   }
   .col-25 {
     float: left;
@@ -127,4 +135,26 @@ li a:hover {
   position: relative;
   left: -35px;
   content: "&#10006;";
+}
+
+/* Create equal columns that float next to each other */
+.column {
+  float: left;
+  height: 200px;
+  width: 50%;
+  padding: 5px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
 }
