modifed .py and .html files

--- a/app/templates/app/accounts.html
+++ b/app/templates/app/accounts.html
@@ -30,7 +30,7 @@
                 </blockquote>
             </p>
             <br>
-            <form action="/app/website/register.html">
+            <form href="app/register">
             <input type="submit" value="Register!">
         </form>
         <br>
@@ -59,7 +59,7 @@
             <blockquote> Using a savings account creates some distance between everyday spending money that's kept in your checking account and cash that's needed later,
              whether for an unexpected emergency or a planned vacation. Savings accounts also typically earn more interest than checking accounts.</blockquote>
             </p> <br>
-            <form action="/app/website/register.html">
+            <form action="/app/register">
             <input type="submit" value="Register!">
         </form>
         <br>
