--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -27,7 +27,7 @@
                     <a href="/service">Services</a>
                 </li>
                 <li>
-                    <a href="/login" class="split">Login</a>
+                    <a href="/register" class="split">Login</a>
                 </li>
             </ul>
             </nav>
